--- a/index.html
+++ b/index.html
@@ -68,6 +68,13 @@
 
     </div>
 
+        <div class="fourth-section">
+            <h2>Submit your email address,so that we can notify you about our special offers:-</h2>
+           
+            <input type="email" id="email" placeholder="Enter Your Email"> <br>
+            <button class="adding-button" type="submit"><a target="_blank" href="https://fb.com/shakawat.hossain.arman/">Submit</a></button>
+        </div>
+
      <div id="last-part">
             <h2 class="font-color">FOOD <span class="text-color">NETWORK</span></h2>
             <footer><p>Eat healthy to live healthy,Live healthy to live happy</p></footer>
